# dental-caries-mlops

./: .dockerignore  .env.template  .gitignore  .pre-commit-config-simple.yaml  .pre-commit-config-uv.yaml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  GITHUB_SETUP_GUIDE.md  PROJECT_SUMMARY.md  README.md  predict.py  pyproject.toml  repo.bundle  test.py
.github/: CICD_SETUP.md
.github/workflows/: cd.yml  ci.yml  pr.yml
deploy_service/: Dockerfile  predict_function.py  pyproject.toml  service_test.py
deploy_service/templates/: index.html
local-airflow/: .env.example  docker-compose-simple.yml  docker-compose.yml  requirements.txt  start-airflow.sh
local-airflow/dags/: dag_monitoring_pipeline.py  ml_function.py  test.py
templates/: index.html
terraform/: Dockerfile.mlflow  README.md  build-mlflow-image.sh  deploy-complete.sh  deploy-prediction-service.sh  deploy.sh  destroy.sh  get-mlflow-url.sh  main.tf  start-mlflow.sh  terraform.tfvars.example  update-env.sh
tests/: README.md  UV_TESTING_SETUP.md  conftest.py  pytest.ini  requirements.txt  run_all_tests_uv.sh  run_integration_tests.sh  run_integration_tests_uv.sh  run_unit_tests_uv.sh  test_deploy_service.py  test_integration.py  test_ml_functions.py
